<resources>
    <string name="app_name">Enjad</string>
    <string name="login">Login</string>
    <string name="skip">skip</string>
    <string name="code">code</string>
    <string name="phone">phone</string>
    <string name="password">password</string>
    <string name="field_req">Field required</string>
    <string name="Open_a_new_communication">Open a new communication</string>
    <string name="Edit_a_report">Edit a report</string>
    <string name="show_all">show_all</string>
    <string name="name">name</string>
    <string name="pass_short">password is short</string>
    <string name="or">or</string>
    <string name="signup">Sign Up</string>
    <string name="you_already_have_an_account_log_in">you already  have an account log in</string>
    <string name="numReport">Number Report</string>
    <string name="link">Link ( From google map )</string>
    <string name="send">Send</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="confirm">Confirm</string>
    <string name="resend">Resend</string>
    <string name="notifications">Notifications</string>
    <string name="ok">OK</string>
    <string name="field_required">Field Required</string>
    <string name="failed">Failed</string>
    <string name="wait">Wait...</string>
    <string name="user_not_found">User not found</string>
    <string name="inc_pass">Incorrect Password</string>
    <string name="back">Back</string>
    <string name="report_number">report number</string>
    <string name="distance">Distance</string>
    <string name="status">Status</string>
    <string name="logout">Logout</string>
    <string name="no_report">No Reports</string>
    <string name="undefined">undefined</string>
    <string name="km">Km</string>
</resources>
