<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp">

        <TextView
            android:id="@+id/tv_num"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@color/gray3"
            android:gravity="center"
            android:text="@string/report_number"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp">

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@color/gray3"
            android:gravity="center"
            android:text="@string/distance"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp">

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@color/gray2"
            android:gravity="center"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </androidx.cardview.widget.CardView>

</LinearLayout>
