<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="lang"
            type="String" />


        <variable
            name="backListener"
            type="com.developer.enjad.interfaces.Listeners.BackListener" />




    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities_fragments.activity_edit_report.EditReportActivity">
    <?xml version="1.0" encoding="utf-8"?>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:onClick="@{()->backListener.back()}"
            >

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:clickable="false"
                android:longClickable="false"
                android:rotation='@{lang.equals("ar")?180:0}'
                android:src="@drawable/ic_arrow_left"
                android:tint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:longClickable="false"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/tv_num"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/report_number"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/tv_distance"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/distance"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/status"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>