<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />
        <variable
            name="userModel"
            type="com.developer.enjad.models.UserModel" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities_fragments.activity_home.HomeActivity">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:fillViewport="true"
            android:scrollbars="none"
            android:background="@color/gray3"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/gray3"
                        />
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:textSize="30sp"
                        android:padding="7dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_corner"
                        android:src="@drawable/logo"
                        />
                </FrameLayout>

                <LinearLayout
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    >

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="3dp"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="5dp"
                        android:background="@color/colorPrimary"

                        >

                        <FrameLayout
                            android:id="@+id/flNewComm"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            android:background="@drawable/rounded_corner">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="false"
                                android:background="@color/colorPrimary"
                                android:longClickable="false">

                                <TextView
                                    android:id="@+id/tvBus"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="50dp"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginEnd="50dp"
                                    android:text="@string/Open_a_new_communication"
                                    android:textColor="@color/white"
                                    android:textSize="16sp"
                                    android:textStyle="bold"
                                    app:layout_constraintStart_toEndOf="@id/icon1"
                                    app:layout_constraintTop_toTopOf="parent"

                                    />

                                <TextView
                                    android:id="@+id/tvShowAllBus"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/show_all"
                                    android:textColor="@color/white"
                                    android:textSize="13sp"
                                    app:layout_constraintStart_toStartOf="@id/tvBus"
                                    app:layout_constraintTop_toBottomOf="@id/tvBus" />

                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:layout_marginStart="10dp"
                                    android:layout_marginEnd="10dp"
                                    android:background="@drawable/circle_trans_white"
                                    android:padding="1dp"
                                    android:tint="@color/white"
                                    android:rotation='@{lang.equals("ar")?180:0}'
                                    android:src="@drawable/ic_arrow_right"
                                    app:layout_constraintBottom_toBottomOf="@id/tvShowAllBus"
                                    app:layout_constraintStart_toEndOf="@id/tvShowAllBus"
                                    app:layout_constraintTop_toTopOf="@id/tvShowAllBus" />


                                <ImageView
                                    android:id="@+id/icon1"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:layout_marginStart="10dp"
                                    android:layout_marginEnd="10dp"
                                    android:src="@drawable/ic_connect"
                                    android:tint="@color/white"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </FrameLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="3dp"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="5dp">

                        <FrameLayout
                            android:id="@+id/flEditReport"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/rounded_corner">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="false"
                                android:longClickable="false">

                                <TextView
                                    android:id="@+id/tvCaptain"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="50dp"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginEnd="50dp"
                                    android:text="@string/Edit_a_report"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="16sp"
                                    android:textStyle="bold"
                                    app:layout_constraintStart_toEndOf="@id/icon2"
                                    app:layout_constraintTop_toTopOf="parent"

                                    />

                                <TextView
                                    android:id="@+id/tvShowAllCaptain"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/show_all"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="13sp"
                                    app:layout_constraintStart_toStartOf="@id/tvCaptain"
                                    app:layout_constraintTop_toBottomOf="@id/tvCaptain" />

                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:layout_marginStart="10dp"
                                    android:layout_marginEnd="10dp"
                                    android:background="@drawable/circle_trans_white"
                                    android:padding="1dp"
                                    android:tint="@color/colorPrimary"
                                    android:rotation='@{lang.equals("ar")?180:0}'
                                    android:src="@drawable/ic_arrow_right"
                                    app:layout_constraintBottom_toBottomOf="@id/tvShowAllCaptain"
                                    app:layout_constraintStart_toEndOf="@id/tvShowAllCaptain"
                                    app:layout_constraintTop_toTopOf="@id/tvShowAllCaptain"

                                    />

                                <ImageView
                                    android:id="@+id/icon2"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:layout_marginStart="10dp"
                                    android:layout_marginEnd="10dp"
                                    android:src="@drawable/ic_edit"
                                    android:tint="@color/colorPrimary"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />


                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </FrameLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardLogout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="3dp"
                    app:cardBackgroundColor="@color/white"
                    app:contentPadding="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/logout"
                        android:clickable="false"
                        android:longClickable="false"
                        />


                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
